Fix certificate problems
* Drop in temp replacement cert if none existent.
* Fix bug in postinst that deleted nginx config
* Add dependency on ssl-cert that pulls in

Signed-off-by: Tor Krill <tor@openproducts.se>

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Standards-Version: 3.9.4
 Package: nginx-opi
 Architecture: all
 Depends: ${misc:Depends},
+ ssl-cert,
  mysql-server,
  nginx-light,
  php5-xcache,
