--- a/debian/control
+++ b/debian/control
@@ -11,10 +11,8 @@ Depends: ${misc:Depends},
  ssl-cert,
  mysql-server,
  nginx-light,
- php5-fpm,
- php5-apcu,
- php5-mysqlnd
-Replaces: php5-xcache
-Conflicts: libapache2-mod-php5filter, libphp5-embed, php5-xcache
+ php-fpm,
+ php-apcu,
+ php-mysqlnd
 Description: OPI generic nginx config
  Sets up deps and infrastructure for OPI nginx usage
