Update dep on php-mysql
Signed-off-by: Tor Krill <tor@openproducts.se>

--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,6 @@ Depends: ${misc:Depends},
  nginx-light,
  php-fpm,
  php-apcu,
- php-mysqlnd
+ php-mysql
 Description: OPI generic nginx config
  Sets up deps and infrastructure for OPI nginx usage
